@@ -37,6 +37,7 @@ cdef extern from "../../include/LHAPDF/PDF.h" namespace "LHAPDF":
         string description() except +
         string type() except +
         int qcdOrder() except +
+        # void _print "print" () except +
         #PDFSet& set()
         #PDFInfo& info()
         #AlphaS& alphaS()
@@ -58,11 +59,12 @@ cdef extern from "../../include/LHAPDF/PDFSet.h" namespace "LHAPDF":
         string name() except +
         string description() except +
         string errorType() except +
+        # void _print "print" () except +
 
 cdef extern from "../../include/LHAPDF/PDFInfo.h" namespace "LHAPDF":
     cdef cppclass PDFInfo(Info.Info):
         bool has_key(string)
-    
+
 cdef extern from "../../include/LHAPDF/Factories.h" namespace "LHAPDF":
     #cdef Info& getConfig()
     cdef PDFSet& getPDFSet(string)
@@ -70,4 +72,3 @@ cdef extern from "../../include/LHAPDF/Factories.h" namespace "LHAPDF":
     cdef PDF* mkPDF(string, int)
     cdef PDF* mkPDF(int)
     #cdef AlphaS* mkAlphaS(string)
-
